<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding20dp"
    tools:context=".LoginFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/black_color"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_address" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="@dimen/padding20dp"
        android:textColor="@color/black_color"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:inputType="numberPassword"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password" />

    <Button
        android:layout_marginTop="@dimen/padding50dp"
        android:id="@+id/login_nav_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />
</LinearLayout>