<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/login_nav_fragment"
    android:id="@+id/nav_graph">
    <fragment
        android:id="@+id/login_nav_fragment"
        android:name="com.udacity.shoestore.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_gfg_nav_to_something2"
            app:destination="@id/on_boarding_nav_fragment"
            app:popUpTo="@id/login_nav_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/on_boarding_nav_fragment"
        android:label="@string/on_boarding"
        android:name="com.udacity.shoestore.OnboardingFragment"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_to_instruction"
            app:destination="@id/instruction_nav_fragment"
            app:popUpTo="@id/on_boarding_nav_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instruction_nav_fragment"
        android:label="@string/instruction"
        android:name="com.udacity.shoestore.InstructionFragment"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instruction_nav_fragment_to_shoe_list_nav_fragment"
            app:destination="@id/shoe_list_nav_fragment" />
    </fragment>
    <fragment
        android:id="@+id/shoe_list_nav_fragment"
        android:label="@string/shoe_list"
        android:name="com.udacity.shoestore.ShoeListFragment"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoe_list_nav_fragment_to_shoe_details_nav_fragment"
            app:destination="@id/shoe_details_nav_fragment" />
    </fragment>
    <fragment
        android:id="@+id/shoe_details_nav_fragment"
        android:label="@string/shoe_details"
        android:name="com.udacity.shoestore.ShoeDetailsFragment"
        tools:layout="@layout/fragment_shoe_details"/>

</navigation>