<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InstructionFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/skip_button"
        android:textAllCaps="false"
        android:layout_gravity="start"
        android:text="@string/skip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black_color"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/choose_your_favourite_shoes"
        android:textColor="@color/black_color"
        android:id="@+id/choose_your_favourite_shoes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/add_it_to_cart"
        android:id="@+id/add_it_to_cart"
        android:textColor="@color/black_color"
        android:paddingTop="@dimen/padding20dp"
        app:layout_constraintTop_toBottomOf="@id/choose_your_favourite_shoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:id="@+id/choose_your_payment_method"
        android:text="@string/choose_your_payment_method"
        android:textColor="@color/black_color"
        android:paddingTop="@dimen/padding20dp"
        app:layout_constraintTop_toBottomOf="@id/add_it_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:id="@+id/check_out"
        android:text="@string/check_out"
        android:textColor="@color/black_color"
        android:paddingTop="@dimen/padding20dp"
        app:layout_constraintTop_toBottomOf="@id/choose_your_payment_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>